<resources>

    <string name="app_name">Investland</string>

    <string name="investland">Инвестландия</string>
    <string name="n_percents">%1$d \%%</string>
    <string name="n_potions">x%1$d</string>
    <string name="n_coins">%1$d ₽</string>
    <string name="n_answers">%1$d/%2$d</string>
    <string name="n_inflation">-%1$d ₽</string>
    <string name="n_elapsed_time">%1$d сек</string>

    <string name="complete_other_first">Для начала пройдите остальные уровни</string>

    <string name="forest_level">Леса\nдивидендов\n%1$d / 3</string>
    <string name="desert_level">Пустыня\nрисков\n%1$d / 3</string>
    <string name="hill_level">Долина\nвложений\n%1$d / 3</string>

    <string name="forest">Леса\nдивидендов</string>
    <string name="desert">Пустыня\nрисков</string>
    <string name="hill">Долина\nвложений</string>

    <string name="welcome_to_investland">Добро пожаловать в Инвестландию!</string>
    <string name="investland_tutorial">На каждой территории расположились великаны, победи их и захвати эти места, чтобы добраться до последнего!</string>
    <string name="are_you_ready_to_fight">Ты готов к битве?</string>
    <string name="you_can_use_potion"><![CDATA[Ты можешь воспользоваться зельем\n <a href=\'https://www.vtbins.ru/?a\'>ВТБ Страхования</a> и получть +1 жизнь в битве]]></string>

    <string name="action_alright">Понятно</string>
    <string name="insurence">"<![CDATA[«ВТБ Страхование» осуществляет деятельность по всем видам страхования юридических \n и физических лиц, включая обязательное медицинское страхование и страхование жизни, а также услуги перестрахования\n\n <a href='https://www.vtbins.ru/?a'>Подробнее на сайте</a></b>]]></string>
    <string name="action_fight">Отправиться в бой</string>
    <string name="action_go_fight">Вперед в бой</string>
    <string name="action_use_potion">Использовать зелье x1</string>
    <string name="action_share">Рассказать об успехах</string>
    <string name="action_back_to_map">Вернуться на карту</string>
    <string name="action_try_again">Попробовать снова</string>

    <string name="victory">Победа!</string>
    <string name="defeat">Поражение!</string>

    <string name="fight_on_1">Твоя задача победить босса. За правильный ответ ты отнимаешь у врага одну жизнь и получаешь 500 монет.</string>
    <string name="fight_on_2">За неправильный ответ ты теряешь одну жизнь.</string>
    <string name="fight_on_3">Твои сбережения постепенно съедает инфляция, помни об этом!</string>

    <string name="question">Вопрос %d</string>
    <string name="question_1_title">Могут ли инвесторы перепродавать облигации компании/государства друг другу?</string>
    <string name="question_1_answer_1">Конечно, если есть покупатель</string>
    <string name="question_1_answer_2">Нет, ведь это не акции!</string>

    <string name="question_2_title">Перед вами на выбор есть возможность выкупить несколько выпусков облигаций компаний с разной доходностью, какую вы выберете?</string>
    <string name="question_2_answer_1">ООО Гром с доходностью 8%</string>
    <string name="question_2_answer_2">ООО Ивушки с доходностью 40%</string>

    <string name="question_3_title">Обязательно ли держать облигацию до даты погашения?</string>
    <string name="question_3_answer_1">Не обязательно</string>
    <string name="question_3_answer_2">Обязательно, иначе ты не получишь обратно деньги</string>

    <string name="question_4_title">Облагается ли НДФЛ весь доход, полученный по облигациям?</string>
    <string name="question_4_answer_1">Нет, иначе какой смысл их покупать?</string>
    <string name="question_4_answer_2">Да, кроме дохода по государственным облигациям</string>
    <string name="question_4_answer_3">Да, необходимо заплатить НДФЛ</string>

    <string name="question_5_title">На что важно обращать внимание при приобретении облигации?</string>
    <string name="question_5_answer_1">Конечно же на стоимость, купил подешевле, продал подороже</string>
    <string name="question_5_answer_2">Номинал, дата выпуска и переодичность выплат</string>
    <string name="question_5_answer_3">На величину купона, дату погашения и сам номинал</string>

    <string name="question_6_title">Что вам, как владельцу облигации нужно сделать чтобы получить номинал в дату погашения?</string>
    <string name="question_6_answer_1">Ничего, мне всё рассчитают автоматически</string>
    <string name="question_6_answer_2">Успеть облигации продать до даты погашения</string>
    <string name="question_6_answer_3">Обратиться к своему брокеру чтобы меня рассчитали</string>

    <string name="question_7_title">Страхует ли Агенство по Страхованию вкладов вложения в облигации?</string>
    <string name="question_7_answer_1">Конечно</string>
    <string name="question_7_answer_2">Нет, данные вложения не страхуются</string>

    <string name="question_8_title">Что происходит через 1 год при выпуске 2 летних облигаций с безотзывной офертой на 1 год?</string>
    <string name="question_8_answer_1">Компания имеет право досрочно погасить облигацию</string>
    <string name="question_8_answer_2">Держатель облигации имеет право о досрочном погашении</string>
    <string name="question_8_answer_3">Ничего не произойдёт</string>

    <string name="question_9_title">Вы хотите приобрести надёжную облигацию, какую выберете?</string>
    <string name="question_9_answer_1">Облигация федерального займа (ОФЗ), погашение 5 мая</string>
    <string name="question_9_answer_2">ООО МойДоДыр, дата погашения 29 декабря</string>
    <string name="question_9_answer_3">Облигации госкомпании, погашение 13 декабря</string>

    <string name="question_10_title">Что происходит через 1 год при выпуске 2 летних облигаций с безотзывной офертой на 1 год?</string>
    <string name="question_10_answer_1">Компания имеет право досрочно погасить облигацию</string>
    <string name="question_10_answer_2">Держатель облигации имеет право о досрочном погашении</string>
    <string name="question_10_answer_3">Ничего не произойдёт</string>



</resources>